CTCTRADERS-2837: break-all class added to balance field to prevent rare chance of overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,7 @@ $hmrc-assets-path: "/check-guarantee-balance/assets/lib/hmrc-frontend/hmrc/asset
 p {
     @extend .govuk-body;
 }
+
+.breakAll {
+  word-break: break-all;
+}
